# ChangeLog for sys-fs/squashmount
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squashmount-4.2 (21 Jan 2014)

  24 Jan 2014; Martin Väth <martin@mvath.de>:
  Avoid duplicate installation

  21 Jan 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-4.1 (03 Dec 2013)

  03 Dec 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support $killpower (/etc/killpower)

*squashmount-4.0-r1 (17 Dec 2013)

  17 Dec 2013; Martin Väth <martin@mvath.de>:
  Fix perl path

*squashmount-4.0 (24 Nov 2013)

  24 Nov 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-3.8 (21 Nov 2013)

  21 Nov 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-3.7-r1 (02 Nov 2013)

  02 Nov 2013; Martin Väth <martin@mvath.de>:
  Shebang care

*squashmount-3.7 (22 Oct 2013)

  22 Oct 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-3.6 (19 Oct 2013)

  12 Oct 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Introduce CHOWN, CHMOD; default CHMOD=>0644

*squashmount-3.5 (09 Oct 2013)

  12 Oct 2013; Martin Väth <martin@mvath.de>:
  Use readme.gentoo.eclass

  09 Oct 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-3.4 (03 Oct 2013)

  03 Oct 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-3.3 (22 Sep 2013)

  22 Sep 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*squashmount-3.1 (21 Sep 2013)

  21 Sep 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Report new recommended dependencies.
  This version will modprobe required modules and can be configured to skip
  overlayfs or aufs depending on availability without a warning.

*squashmount-2.10 (09 Sep 2013)

  10 Sep 2013; Martin Väth <martin@mvath.de>: