@@ -1,0 +1,3 @@
+DIST sundtek-tv-20090913.pdf 40767 SHA256 89c63affc25759a96c23331170a22ba1148f632e7ceb22383cf8ff0b29b499d3 SHA512 38245d485f4cde1deac55252fe070f0167ee3e8b52dc30d1ac2594a5f19ffb14054051f2dfe76bde64f7485d2c975850264adcde4575cc8b397eb0948a118e00 WHIRLPOOL 295c039be49b0b2c77358f0a9aebca621f9c1ddc0491182028bdc1fb24e84ab6ca07f32e1f69638c92c1939d328dad69e63be947fd403e896bbbee737e59dc38
+DIST sundtek-tv-amd64-20140304.tar.gz 1238797 SHA256 02ab0cbf85d20a10be6570f39208f940073a152f6b73a9f144ae03925a0fd6e1 SHA512 da8e45eeaaf82f2ff946aeb157c7f7b9405817bee49e2313c54285f901db7c120f9056e71c793763282719e32e9ee0005ab3a5557f62e9daadbebbc1457b8b34 WHIRLPOOL 5d463961da7f0597a045f3565ca43176b57b00e4dbbd25792675d6a9cadabbf43564d993481f8d49292697c4fe08cd9787aa164a53fb6d274dfd778d94cf37d2
+DIST sundtek-tv-x86-20140304.tar.gz 1161883 SHA256 e57429ac72aaae9bd41e3a8a959605ddab53804b7f5e95dc5d2d5ee1b478de00 SHA512 834be5a4925fa61bd4d7d0f6789c5df1c038250e0b8b2f06812721528cd5211599702f7f880ddcdc0a494eb3bfbdba245aa25fbdbabe6e838f827f0e003c5717 WHIRLPOOL 89c1918f8ec3b21e9958ffe16424b0fa8c9ac03261540b4eba0a576d78801fc798618d98a0b76b4023e6a769769de15d49e3bc936efb831e21b235d74ddd986a
