@@ -1,0 +1,8 @@
+# ChangeLog for media-video/sundtek-tv-pro
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*sundtek-tv-pro3 (17 Feb 2014)
+
+  17 Feb 2014; Martin Väth <martin@mvath.de>:
+  New ebuild from scratch.
