@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-4.3 (09 Mar 2014)
+
+  09 Mar 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *squashmount-4.2 (21 Jan 2014)
 
   24 Jan 2014; Martin Väth <martin@mvath.de>:
